--- a/investigate-react-konva/package.json
+++ b/investigate-react-konva/package.json
@@ -17,10 +17,7 @@
     "react-konva": "^18.2.10",
     "react-konva-utils": "^1.0.4",
     "react-router-dom": "^6.14.0",
-    "swr": "^2.2.0",
-    "tailwind-merge": "^1.13.2",
-    "zundo": "^2.0.0-beta.23",
-    "zustand": "^4.3.8"
+    "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
