Update environment variables and form fields in frontend code

--- a/investigate-how-to-change-password-in-90days/frontend/.env.sample
+++ b/investigate-how-to-change-password-in-90days/frontend/.env.sample
@@ -1,3 +1,4 @@
 VITE_AWS_REGION="ap-northeast-1"
 VITE_AWS_USER_POOLS_ID="******"
 VITE_AWS_USER_POOLS_CLIENT_ID="*********"
+VITE_APP_NAME="Test App"
